# ceddi

./: .tool-versions  pyproject.toml  sample_note.txt
ceddi/: __init__.py  ceddi-python.code-workspace  expression_parser.py  main.py  note_parser.py
ceddi/ui/: editor.py  file_list.py  file_view.py  menu_bar.py  results.py  window.py
tests/: test_note_parser.py  test_parser.py
